# codaco

./: .gitignore  CHANGELOG.md  LICENSE  README.md  setup.cfg
.github/workflows/: cd.yaml  ci.yaml
codaco/: data.py  fwf.py  stat.py
notes/: ucimlr_exceptional.csv
src/codaco/: data.py
tests/: test_data.py
