[metadata]
name = codaco
version = 0.0.1
author = Christopher Schölzel
author_email = christopher.schoelzel@gmx.net
description = Data science library for exploring unknown datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CSchoel/codaco
project_urls =
    Bug Tracker = https://github.com/CSchoel/codaco/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas >= 1.2
    numpy >= 1.20
    matplotlib >= 3.4
    requests >= 2.25

[options.packages.find]
where = src
